<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/about_title_general"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/about_title_general"
            android:textSize="25dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#000000" />

        <TextView
            android:id="@+id/about_content_general"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:singleLine="false"
            android:text="@string/about_content_general" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#000000" />

        <TextView
            android:id="@+id/about_title_scramble"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:singleLine="false"
            android:text="@string/about_title_scramble"
            android:textSize="25dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#000000" />

        <TextView
            android:id="@+id/about_content_scramble"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:singleLine="false"
            android:text="@string/about_content_scramble" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#000000" />

        <TextView
            android:id="@+id/about_title_descramble"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:singleLine="false"
            android:text="@string/about_title_descramble"
            android:textSize="25dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#000000" />


        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
            android:id="@+id/about_content_descramble"
            android:singleLine="false"
            android:text="@string/about_content_descramble"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />
    </LinearLayout>
</ScrollView>