<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.calvin.imgscramble.ScramblingActivity">


    <RelativeLayout
        android:id="@+id/scrambling_loading_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <ProgressBar
            android:id="@+id/scrambling_progressBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/scrambling_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/scrambling_progressBar"
            android:layout_marginTop="30dp"
            android:layout_toRightOf="@+id/scrambling_progressBar"
            android:text="@string/scrambling_loading" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/scrambling_picture_parent_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="6">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/scrambling_output_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:background="#000000"
                android:scaleType="centerInside"
                android:padding="1dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scrambling_image_widthheight"
                android:layout_gravity="center_horizontal"
                android:id="@+id/scrambling_width_height"
                android:gravity = "center"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/scrambling_quality"
                    android:id="@+id/scrambling_quality_text"
                    android:layout_gravity="center"/>

                <SeekBar
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/scrambling_quality_seekBar"
                    android:max="19" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/scrambling_clipboard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_content_copy_black_36dp"
                    android:onClick="scramblingCopyImage"/>

                <ImageButton
                    android:id="@+id/scrambling_save_to_file"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:longClickable="false"
                    android:onClick="scramblingSaveImage"
                    android:src="@drawable/ic_save_black_36dp" />

                <ImageButton
                    android:id="@+id/scrambling_share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="scramblingShare"
                    android:src="@drawable/ic_share_black_36dp" />
            </LinearLayout>
        </LinearLayout>



    </LinearLayout>

</RelativeLayout>
